docs: update README.md

--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=5.129.198.137
 DB_PORT=3306
 DB_DATABASE=elmikeev
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=elmikeev
+DB_PASSWORD=elmikeev
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -65,5 +65,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # API CONFIGURATION
-WB_BASE_URL=
-WB_API_KEY=
+WB_BASE_URL=http://109.73.206.144:6969
+WB_API_KEY=E6kUTYrYwZq2tN4QEtyzsbEBk3ie
